# LearningProject

./: LICENSE  README.md
bike/: README.md
bike/app/: README.md  analysis_options.yaml  pubspec.yaml
bike/app/android/app/: build.gradle.kts
bike/app/lib/: main.dart
bike/docs/: bluetooth_protocol.md  system_overview.md
bike/firmware/01_bluetooth_lcd_debug/: README.md  bt_uart.c  bt_uart.h  main.c  main.h
bike/firmware/02_gps_time_lcd/: README.md  gps_uart.c  gps_uart.h  lcd1602.h  main.c  main.h
bike/firmware/03_servo_keypad_debug/: README.md  keypad.c  main.c  main.h  servo.c  servo.h
bike/firmware/04_mp3_keypad_debug/: README.md  delay.h  keypad.h  main.c  main.h  mp3_uart.c  mp3_uart.h
bike/firmware/05_bike_lock_controller/: README.md  bt_uart.c  bt_uart.h  delay.c  lcd1602.c  main.c  main.h  mp3_uart.c  servo.h
bike/reference/GPS/example/1602A/: GPS.h  LCD1602.c  LCD1602.h  lcd12864.c  lcd12864.h  main.c  main.h
bike/reference/mp3/example/: STARTUP.LST  code.c
spam_mail/: .gitignore  pyproject.toml
spam_mail/backend/app/: config.py  db.py  main.py  models.py  schemas.py
spam_mail/backend/app/routers/: dataset.py  predict.py  train.py
spam_mail/backend/app/services/: prediction.py  preprocessing.py  training.py
spam_mail/frontend/: index.html  package-lock.json  package.json
spam_mail/frontend/src/: App.vue  main.js
spam_mail/frontend/src/api/: index.js
spam_mail/frontend/src/router/: index.js
spam_mail/frontend/src/views/: DataUpload.vue  Evaluation.vue  Prediction.vue  Preprocessing.vue  TrainModel.vue
(+15 files in other folders)
